--- a/main.css
+++ b/main.css
@@ -3,128 +3,129 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-  color: white;
+}
+body{
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .wrapper {
+  position: relative;
+}
+
+.navbar-mobile {
+  position: absolute;
+  width: 60%;
   height: 100vh;
-  width: 100vw;
-  background-color: rgba(37, 55, 71, 1);
-  overflow: hidden;
-  padding-left: 1rem;
+  background-color: rgb(42, 53, 73);
+  display: none;
+  top: 4rem;
+}
+
+.active {
+  display: block;
 }
 
 .navbar {
-  width: 100%;
-  height: 15%;
+  width: 100vw;
+  height: 4rem;
+  background-color: rgb(4, 74, 195);
   display: flex;
-}
-.body {
-  width: 100%;
-  height: 75%;
-  display: flex;
-}
-
-.title {
-  width: 40%;
-  height: 100%;
-  display: flex;
-  padding-left: 2%;
+  justify-content: center;
   align-items: center;
-}
-.title h1 {
-  font-size: 35px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-.nav {
-  width: 60%;
-  height: 100%;
-  display: flex;
-  padding-left: 4vw;
-  align-items: center;
-}
-
-.navbar-items {
-  display: flex;
-  align-items: center;
-  height: 5rem;
-  gap: 4rem;
-  list-style: none;
-  padding: 1rem;
-  font-size: 20px;
-  font-family: "Times New Roman", Times, serif;
-  font-weight: 500;
-  cursor: pointer;
-
-}
-
-.navbar-items li:hover{
-    text-decoration: underline rgb(255, 255, 255);
-
-}
-
-.info {
-  width: 40%;
-  height: 100%;
-
-  padding: 3rem 1rem;
-}
-
-.img {
-  width: 60%;
-  height: 100%;
-
-  display: flex;
-  align-items: center;
-}
-
-.info h2 {
-  font-size: 70px;
-}
-
-.info h3 {
-  font-size: 30px;
-  font-weight: 300;
-  margin-top: 0.5rem;
-}
-
-.info p {
-  font-size: 20px;
-  margin-top: 5rem;
-}
-
-.btn {
-  background-color: coral;
-  width: fit-content;
-  padding: 1rem 2rem;
-  border-radius: 100px;
-  margin-top: 4rem;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: rgb(181, 91, 58);
   color: white;
+  position: relative;
 }
 
-.img img {
-  height: 80%;
+.navbar i {
+  font-size: 25px;
+  position: absolute;
+  left: 1rem;
+}
+
+.body {
+}
+
+.body img {
   width: 100%;
+  height: 30rem;
   object-fit: cover;
 }
 
-.footer {
-  width: 100%;
-  height: 10%;
-  padding-left: 1rem;
+.body-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 1rem;
+  padding: 1rem 0;
 }
 
-.footer-items{
-    display: flex;
-    gap: 2rem;
-    list-style: none;
-    font-size: 35px;
-    padding-top: 2rem;
+.body-info h3 {
+  color: rgb(96, 96, 96);
+  font-weight: 300;
 }
+
+.btn {
+  background-color: rgb(4, 74, 195);
+  padding: 1rem 3rem;
+  border-radius: 100px;
+  color: white;
+  font-weight: 600;
+}
+
+.more {
+  width: 100vw;
+  background-color: rgb(4, 74, 195);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  color: white;
+  padding: 3rem;
+  font-size: 20px;
+  font-weight: 500;
+  margin: 3rem 0;
+}
+
+.navbar-items {
+  display: none;
+}
+
+/* .grid{
+  background-color: aquamarine;
+  width: 100%;
+  height: 50rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto, 15rem);
+  gap: 5px;
+}
+
+.grid-item{
+  background-color: crimson;
+  width: 100%;
+  height: 100%;
+} */
+
+
+
+@media (min-width: 800px) {
+  .navbar {
+    background-color: brown;
+  }
+  .grid{
+  background-color: aquamarine;
+  width: 100%;
+  height: 50rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(auto, 15rem);
+  gap: 5px;
+}
+}
+
+
+
 
